-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.151 2007-11-28 21:17:33 guru Exp $
-----------------------------------------------------------------------------------------

2007-11-28	pwessel
	* gmt_stat.c:		Fixed minor issues in PvQv function

2007-11-25	remko
	* configure.in:		Honor LDFLAGS set by user
	* configure.ac:		Renamed from configure.in

2007-11-24	remko
	* configure.in, */makefile, makegmt.macros.in:	Provide compiler and linker flags for
				netCDF through NC_CFLAGS and NC_LIBS. This should help distributions,
				like Fedora, that have netCDF files not in include and lib directories.

2007-11-14	remko
	* guru/gmtguru.macros.orig:	Settings are now only included in GNUmakefile.
				Version information has moved to configure.in.
	* GNUmakefile:		Has become the only makefile to include gmtguru.macros*
	* */GNUmakefile:	Removed includes of guru/gmtguru.macros*. Information now comes
				from src/makegmt.macros.
	* gmt_version.h.in:	New: template for versioning info in source and manpages.
	* doc/GMT_version.tex.in:	New: template for versioning info in documentation.
	* common_options.txt:	Now includes gmt_version.h to get version info.
	* *.txt:		Now include common_options.txt at the very start.
	* doc/GNUmakefile:	Renamed from doc/makefile.
	* test/functions.sh:	Test functions defined in this file to make writing test
				scripts easier.

2007-11-13	remko
	* gmt_grdio.c:		Fixed bug in parsing -D option from e.g. grdedit. Would always
				see 0 as separator (along with /).
	* gmt_support.c:	Removed strncpy from GMT_strtok. No consequence on function.
	* grdinfo.c:		zmin==zmax no longer forces -M option.
			
2007-11-13	pwessel
	* gmt_map.c:		Minor bug in 4th term in conformal->geodetic lat.
	* pslib.c:		Redefine rect symbol to be less prone to round-off
	* PSL_prologue.ps:	New macro for box symbol
	
2007-11-04	pwessel
	* ps2raster.c:		New option -D<dir> specifies alternative output directory.